Update java/core/src/main/java/co/worklytics/psoxy/rules/RulesUtils.java
Co-authored-by: aperez-worklytics <75276364+aperez-worklytics@users.noreply.github.com>